--- a/doctype.html
+++ b/doctype.html
@@ -7,10 +7,10 @@
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Player</title>
 </head>
 <body>
-    <h1 style="text-align: center">Yevhen playeR</h1>
+    <h1 style="text-align: center">web player</h1>
     <div class="music">
         <!--<div class="song">-->
             <!--<span class="songtitle">THUNDER – REMIX</span>-->
