--- a/doctype.html
+++ b/doctype.html
@@ -12,6 +12,7 @@
 <body>
     <h1 style="text-align: center">web player</h1>
     <div class="music">
+        <div class="indent"></div>
         <!--<div class="song">-->
             <!--<span class="songtitle">THUNDER – REMIX</span>-->
             <!--<a href="#" title="Play video" class="play run"></a>-->
